--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link
       rel="stylesheet"
-      href="/node_modules/bootstrap/dist/css/bootstrap.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
     <title>J-Mow Lawn Care</title>
