--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
             <h3 class="hero-subtext custom-color text-uppercase fw-bolder">Welcome to J-MOW Lawn Care</h3>
             <h1 class="hero-text custom-large-text lh-2 text-start">Quick & affordable lawn care <br> for Anthem residents</h1> 
             <p class="hero-subtext-shoveling pt-3 text-center">We shovel snowy driveways too!</p>
-            <button type="button" class="learn-more btn custom-color" style="--bs-btn-font-weight: 500;">Learn More ></button>
+            <a href="#services"><button type="button" class="learn-more btn custom-color" style="--bs-btn-font-weight: 500;">Learn More ></button></a>
           </div>
         </div>
       <!-- end hero area -->
 
       <!-- Services section with cards -->
-      <section class="services-section py-5">
+      <section id="services" class="services-section py-5">
         <div class="container">
           <div class="row">
             <!-- Card 1 -->
