--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <img src="/images/introlawn.jpg" alt="Lawn Care" class=" hero-img img-fluid w-100"> 
           <div class="hero-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-start align-items-start text-white" > 
             <h3 class="hero-subtext custom-color text-uppercase fw-bolder">Welcome to J-MOW Lawn Care</h3>
-            <h1 class="hero-text custom-large-text lh-2 text-start">Quick & affordable lawn care <br> for Anthem residents</h1> 
+            <h1 class="hero-text custom-large-text lh-2 text-start">Quick & easy <br> lawn care for <br> Anthem residents</h1> 
             <p class="hero-subtext-shoveling pt-3 text-center">We shovel snowy driveways too!</p>
             <a href="#services"><button type="button" class="learn-more btn custom-color" style="--bs-btn-font-weight: 500;">Learn More ></button></a>
           </div>
